--- a/.github/workflows/quarto-book-netlify.yaml
+++ b/.github/workflows/quarto-book-netlify.yaml
@@ -23,6 +23,18 @@ jobs:
           # version: 0.9.105
 
       # Install any computing dependency you may need, usually either python and Jupyter or R
+      - name: Put pandoc in PATH
+        run: |
+          mkdir -p ~/.local/bin
+          ln -s $(dirname $(readlink -f  $(which quarto)))"/pandoc" ~/.local/bin/pandoc
+        shell: bash
+
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
+
+      - uses: r-lib/actions/setup-renv@v2
+
       # More specific examples will be shared on quarto-dev/quarto-actions project
 
       - name: Render book to all format
