try out r4ds approach

--- a/.github/workflows/quarto-book-netlify.yaml
+++ b/.github/workflows/quarto-book-netlify.yaml
@@ -4,54 +4,54 @@ on:
   pull_request:
     branches: main
   # to be able to trigger a manual build
-  # workflow_dispatch:
+  workflow_dispatch:
+  schedule:
+    # run every day at 11 PM
+    - cron: '0 23 * * *'
 
 name: Render and deploy Book to Netlify
+
+env:
+  isExtPR: ${{ github.event.pull_request.head.repo.fork == true }}
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
 
       - name: Install Quarto
         uses: quarto-dev/quarto-actions/install-quarto@v1
         with:
-          # To install LaTeX to build PDF book 
-          tinytex: true 
+          # To install LaTeX to build PDF book
+          tinytex: true
           # uncomment below and fill to pin a version
           # version: 0.9.105
 
-      # Install any computing dependency you may need, usually either python and Jupyter or R
-      - name: Put pandoc in PATH
-        run: |
-          mkdir -p ~/.local/bin
-          ln -s $(dirname $(readlink -f  $(which quarto)))"/pandoc" ~/.local/bin/pandoc
-        shell: bash
-
       - uses: r-lib/actions/setup-r@v2
-      - uses: r-lib/actions/setup-renv@v2
+        with:
+          use-public-rspm: true
 
-      # More specific examples will be shared on quarto-dev/quarto-actions project
+      - uses: r-lib/actions/setup-r-dependencies@v2
 
       - name: Render book to all format
         # Add any command line argument needed
         run: |
           quarto render
-
       - name: Deploy to Netlify
+        if: contains(env.isExtPR, 'false')
         id: netlify-deploy
-        uses: nwtgck/actions-netlify@v1
+        uses: nwtgck/actions-netlify@v1.1
         with:
-          # The folder the action should deploy. Adapt if you changed in Quarto config
           publish-dir: './docs'
           production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-message:
             'Deploy from GHA: ${{ github.event.pull_request.title || github.event.head_commit.message }} (${{ github.sha }})'
-          enable-pull-request-comment: true #  Comment on pull request
-          enable-commit-comment: true # Comment on GitHub commit
-          enable-commit-status: true # GitHub commit status 
+          enable-pull-request-comment: false
+          enable-commit-comment: false
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
