--- a/.github/workflows/quarto-book-netlify.yaml
+++ b/.github/workflows/quarto-book-netlify.yaml
@@ -23,6 +23,11 @@ jobs:
           # version: 0.9.105
 
       # Install any computing dependency you may need, usually either python and Jupyter or R
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
+
+      - uses: r-lib/actions/setup-r-dependencies@v2
       # More specific examples will be shared on quarto-dev/quarto-actions project
 
       - name: Render book to all format
