ugh, not _book, "docs"

--- a/.github/workflows/quarto-book-netlify.yaml
+++ b/.github/workflows/quarto-book-netlify.yaml
@@ -39,7 +39,7 @@ jobs:
         uses: nwtgck/actions-netlify@v1
         with:
           # The folder the action should deploy. Adapt if you changed in Quarto config
-          publish-dir: './_book'
+          publish-dir: './docs'
           production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-message:
