add JuliaCall and reticulate :crossed_fingers:

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,12 @@ RoxygenNote: 7.3.1
 Imports: 
     broom,
     here,
+    JuliaCall,
     knitr,
     palmerpenguins,
     readr,
     remotes,
+    reticulate,
     rmarkdown,
     spelling,
     tidyverse,
