definitely need tinytex

--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -18,9 +18,9 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-        # with:
+        with:
+          tinytex: true
           # To install LaTeX to build PDF book
-          # tinytex: true
 
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
