fix some random (so random) errors with LaTeX that caused absolutely everything to go wrong all because of a simple overflowing hbox

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -65,6 +65,8 @@ format:
     documentclass: krantz
     keep-tex: true
     cite-method: natbib
+execute: 
+  freeze: auto
   # epub:
   #   cover-image: cover.png
 
